quick way to restore machine to snapshots

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -34,3 +34,5 @@ HIVE_VERSION: "2.3.0"
 HIVE_HOME: "{{ROOT}}/apache-hive-{{HIVE_VERSION}}-bin"
 
 ZEPPELIN_HOME: "{{ROOT}}/zeppelin-0.7.2-bin-all"
+
+DEFAULT_VM_SNAPSHOT: "base"
