--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -35,4 +35,4 @@ HIVE_HOME: "{{ROOT}}/apache-hive-{{HIVE_VERSION}}-bin"
 
 ZEPPELIN_HOME: "{{ROOT}}/zeppelin-0.7.2-bin-all"
 
-DEFAULT_VM_SNAPSHOT: "base"
+DEFAULT_VM_SNAPSHOT: "done"
