add jolikia integration

--- a/roles/presto/defaults/main.yml
+++ b/roles/presto/defaults/main.yml
@@ -3,3 +3,5 @@ PRESTO_DOWNLOAD_URL: "presto-server-0.183.tar.gz"
 PRESTO_HOME: "{{ROOT}}/presto-server-0.183"
 PRESTO_DATA_DIR: "/data/presto"
 PRESTO_PORT: 8002
+PRESTO_JOLOKIA_PORT: 2222
+PRESTO_JOLOKIA_HOST: "0.0.0.0"
