--- a/roles/presto/templates/jvm.config
+++ b/roles/presto/templates/jvm.config
@@ -1,5 +1,6 @@
 -server
 -Xmx4G
+-javaagent:{{JOLOKIA_FILE}}/jolokia-jvm-1.3.7-agent.jar=port={{PRESTO_JOLOKIA_PORT}},host={{PRESTO_JOLOKIA_HOST}}
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
